# lesson_24_1

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
courses/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_initial.py  0003_alter_lesson_video_url.py  0004_coursesubscription.py  0005_alter_course_owner.py
users/: models.py  payment_data.json  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: load_payments.py
users/migrations/: 0001_initial.py  0002_alter_payment_options_payment_link_and_more.py  0002_payment.py
